--- a/index.html
+++ b/index.html
@@ -205,12 +205,11 @@
     <h1>Praia da Costa - Vila Velha (ES)</h1>
     <nav>
       <ul>
-        <li><a href="/">Início</a></li>
-        <li><a href="#historia">História</a></li>
-        <li><a href="#turismo">Turismo</a></li>
-        <li><a href="#noticias">Notícias</a></li>
+   
         <li><a href="https://horavoo-git-main-victorsaibs-projects.vercel.app/">Horário de voos</a></li>
         <li><a href="https://linhadotempoguarapari.netlify.app/">TIMELINE GUARAPARI</a></li>
+        <li><a href="https://geocredibnkvitoria.com/">CRÉDITO PESSOAL</a></li>
+        <li><a href="https://www.larissasaib.com.br/">Tratamento capilar</a></li>
       
       </ul>
     </nav>
